src/BloomBrowserUI/bookEdit/css/editMode.css
/* ... */
.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
  margin-left: 0;
}
.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
  right: 0px;
}


/*
 * Long-press plugin for adding special characters
*/
.long-press-popup {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  text-align: center;
  background: #96668F;
  padding-top: 10px;
  margin:0;
  font-size: 24pt;
}
.long-press-popup li {
  display:inline-block;
  list-style: none;
	padding: 0px 15px 10px 15px;
  margin-right: 20px;
  margin-bottom: 10px;
  background: #000000;
  cursor:pointer;
  color: white;
  border: solid 4px black;
  border-radius: 12px;
}
.long-press-popup .selected {
  border-color: white;
  -webkit-box-shadow: 0 0 18px rgba(255, 255, 255, 0.75);
  -moz-box-shadow:    0 0 18px rgba(255, 255, 255, 0.75);
  box-shadow:         0 0 18px rgba(255, 255, 255, 0.75);
}

